// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - feign-client with jwt should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/UserFeignClientInterceptor.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/FeignConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - feign-client with oauth2 should match generated files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/AuthorizationHeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/AuthorizedFeignClient.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/OAuth2InterceptedFeignConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/OAuthIdpTokenResponseDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/TokenRelayRequestInterceptor.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/client/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/FeignConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/client/AuthorizationHeaderUtilTest.java": {
    "stateCleared": "modified",
  },
}
`;
